Modify to generate value while typing for easy use

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <option value ="3">pound to gram</option>
             <option value ="4">pound to kilogram</option>
         </select>
-        <button class="convert">convert</button>
+        <!-- <button class="convert">convert</button> -->
+        <h4>View Answers below<span class="arrow">&#xF0AE;</span></h4>
         <span class="result"></span>
        </div>
     </div>
